--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 03:05:06 2018</p>
+         Last Run: Sun Nov 11 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 03:05:06 2018</p>
+         Last Run: Sun Nov 11 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>21</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -261,11 +261,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -273,7 +273,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -282,14 +282,14 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>13</td>
+                        <td>SSW</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -320,7 +320,7 @@
                  "-8",
                  "-4",
                  "-2",
-                 "0"
+                 "-1"
                ]
              },
              {
@@ -333,7 +333,7 @@
                  "-4",
                  "-1",
                  "1",
-                 "3"
+                 "2"
                ]
              }
            ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "63",
-                 "56",
-                 "53"
+                 "73",
+                 "64",
+                 "57",
+                 "54"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "17",
+                 "22",
+                 "18",
                  "15",
-                 "13"
+                 "14"
                ]
              }
            ]
