--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 05:05:03 2018</p>
+         Last Run: Sun Nov 11 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>35</td>
-                        <td>67</td>
-                        <td>0</td>
-                        <td>18</td>
-                        <td>W</td>
-                        <td>52</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>1</td>
-                        <td>-3</td>
-                        <td>37</td>
-                        <td>70</td>
+                        <td>5</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>54</td>
+                        <td>31</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>1</td>
+                        <td>-3</td>
+                        <td>20</td>
+                        <td>69</td>
+                        <td>0</td>
+                        <td>14</td>
+                        <td>W</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>38</td>
-                        <td>72</td>
+                        <td>42</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>57</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "35",
-                 "37",
-                 "38"
+                 "5",
+                 "20",
+                 "42"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "70",
-                 "72"
+                 "66",
+                 "69",
+                 "71"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "54",
-                 "57"
+                 "31",
+                 "37",
+                 "50"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 05:05:03 2018</p>
+         Last Run: Sun Nov 11 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -245,51 +245,51 @@
                   <tbody>
                      <tr>
                         <td>08:00 AM</td>
-                        <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>Partly Cloudy</td>
+                        <td>-5</td>
+                        <td>-9</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>21</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>17</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>2</td>
-                        <td>57</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>15</td>
+                        <td>SSW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>3</td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>53</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>14</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,10 +317,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
-                 "-4",
-                 "-2",
-                 "0"
+                 "-9",
+                 "-6",
+                 "-3",
+                 "-1"
                ]
              },
              {
@@ -330,10 +330,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-4",
-                 "-1",
-                 "1",
-                 "3"
+                 "-5",
+                 "-2",
+                 "0",
+                 "2"
                ]
              }
            ]
@@ -393,8 +393,8 @@
                "data":[
                  "4",
                  "3",
-                 "2",
-                 "1"
+                 "3",
+                 "3"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "64",
-                 "57",
-                 "53"
+                 "75",
+                 "66",
+                 "59",
+                 "56"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "17",
-                 "15",
-                 "14"
+                 "33",
+                 "29",
+                 "24",
+                 "22"
                ]
              }
            ]
