--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 10:05:02 2018</p>
+         Last Run: Sun Nov 11 11:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,34 +30,34 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
-                        <td>5</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>16</td>
-                        <td>W</td>
-                        <td>31</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>20</td>
-                        <td>69</td>
+                        <td>16</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>38</td>
+                        <td>19</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Chance of Rain</td>
+                        <td>1</td>
+                        <td>-3</td>
+                        <td>34</td>
+                        <td>71</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>71</td>
                         <td>0</td>
                         <td>14</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-3",
                  "-4"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
+                 "1",
                  "1",
                  "0"
                ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "20",
-                 "42"
+                 "16",
+                 "34",
+                 "43"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "69",
+                 "68",
+                 "71",
                  "71"
                ]
              },
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "38",
+                 "19",
+                 "40",
                  "50"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 10:05:02 2018</p>
+         Last Run: Sun Nov 11 11:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -265,7 +265,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>27</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -273,23 +273,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>23</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>2</td>
-                        <td>-1</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>3</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>20</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -320,7 +320,7 @@
                  "-9",
                  "-6",
                  "-3",
-                 "-1"
+                 "-2"
                ]
              },
              {
@@ -333,7 +333,7 @@
                  "-5",
                  "-2",
                  "0",
-                 "2"
+                 "1"
                ]
              }
            ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
+                 "71",
                  "64",
-                 "57",
-                 "55"
+                 "56",
+                 "54"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "30",
-                 "27",
-                 "23",
-                 "20"
+                 "25",
+                 "21",
+                 "19"
                ]
              }
            ]
