--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 11:05:03 2018</p>
+         Last Run: Sun Nov 11 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>16</td>
-                        <td>68</td>
+                        <td>18</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>34</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -55,12 +55,12 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Chance of Rain</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>37</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>-4</td>
-                        <td>43</td>
-                        <td>71</td>
-                        <td>0</td>
-                        <td>14</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>50</td>
                      </tr>
@@ -91,7 +91,7 @@
                "data":[
                  "-3",
                  "-3",
-                 "-4"
+                 "-2"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "1",
                  "1",
-                 "0"
+                 "1"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
+                 "18",
                  "34",
-                 "43"
+                 "37"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "71",
-                 "71"
+                 "69",
+                 "72",
+                 "72"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
+                 "18",
                  "40",
                  "50"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 11:05:03 2018</p>
+         Last Run: Sun Nov 11 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,50 +246,50 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>-6</td>
+                        <td>-10</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>30</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
-                        <td>Clear</td>
-                        <td>-2</td>
+                        <td>Partly Cloudy</td>
+                        <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>64</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>25</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>56</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>21</td>
+                        <td>SW</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>Partly Cloudy</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>SSW</td>
-                        <td>19</td>
+                        <td>10</td>
+                        <td>SW</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,10 +317,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
+                 "-10",
                  "-6",
                  "-3",
-                 "-2"
+                 "-1"
                ]
              },
              {
@@ -330,10 +330,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
-                 "-2",
+                 "-6",
+                 "-3",
                  "0",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "64",
-                 "56",
-                 "54"
+                 "75",
+                 "67",
+                 "61",
+                 "58"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "25",
-                 "21",
-                 "19"
+                 "38",
+                 "35",
+                 "33",
+                 "32"
                ]
              }
            ]
