--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 12:05:02 2018</p>
+         Last Run: Sun Nov 11 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>18</td>
-                        <td>69</td>
+                        <td>21</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>18</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>34</td>
-                        <td>72</td>
+                        <td>-2</td>
+                        <td>30</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>40</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>37</td>
-                        <td>72</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>24</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>50</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-3",
-                 "-2"
+                 "-2",
+                 "-4"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "1",
                  "1",
-                 "1"
+                 "-1"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "34",
-                 "37"
+                 "21",
+                 "30",
+                 "24"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
                  "72",
-                 "72"
+                 "73",
+                 "78"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
+                 "10",
                  "40",
-                 "50"
+                 "22"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 12:05:02 2018</p>
+         Last Run: Sun Nov 11 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -248,48 +248,48 @@
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>5</td>
-                        <td>75</td>
+                        <td>6</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>38</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>4</td>
-                        <td>67</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>6</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>35</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>3</td>
-                        <td>61</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>5</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>33</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-1</td>
-                        <td>3</td>
-                        <td>58</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>5</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>32</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -318,9 +318,9 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-10",
-                 "-6",
-                 "-3",
-                 "-1"
+                 "-7",
+                 "-4",
+                 "-2"
                ]
              },
              {
@@ -331,9 +331,9 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-6",
-                 "-3",
-                 "0",
-                 "2"
+                 "-4",
+                 "-1",
+                 "1"
                ]
              }
            ]
@@ -391,10 +391,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "6",
+                 "6",
                  "5",
-                 "4",
-                 "3",
-                 "3"
+                 "5"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "67",
-                 "61",
-                 "58"
+                 "81",
+                 "73",
+                 "66",
+                 "62"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "35",
-                 "33",
-                 "32"
+                 "54",
+                 "45",
+                 "39",
+                 "36"
                ]
              }
            ]
